# floodit

./: CMakeLists.txt  README.md  floodit.kdev4  main.cpp
.kdev4/: floodit.kdev4
core/: floodit.h  flooditboard.cpp  flooditboard.h  flooditstrategy.h
instances/: exemplo_site_fabiano.txt
strategies/: flooditstrategy.h  flooditstrategy_greedy.cpp  flooditstrategy_greedy.h
util/: makefile
